--- a/public/css/main.css
+++ b/public/css/main.css
@@ -12,7 +12,7 @@
    ========================================================================== */
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Nunito+Sans&family=Parisienne&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;600;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
 
